--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,7 +14,6 @@
   --Dark-Gradient: hsl(237, 63%, 64%);
 }
 
-@media screen and (max-width: 375px){
   body{
     width: 100%;
     background:var(--Very-Light-Grayish-Blue);
@@ -45,7 +44,7 @@
     margin-top: 2.5rem;
     width: 100%;
     height: 2rem;
-    background:rgba(204, 204, 204, 0.568);
+    /* background:rgba(204, 204, 204, 0.568); */
     display: flex;
     align-items:center;
     justify-content: center;
@@ -74,6 +73,7 @@
   .handle-button::after,
   .handle-button::before{
     content: "";
+    transition: .2s ease-out;
   }
   
   .handle-button::before{
@@ -115,6 +115,8 @@
   .wrapper-main{
     width: 100%;
     display: flex;
+    flex-direction:column;
+    gap: 2.2rem;
     align-items: center;
     justify-content: center;
   }
@@ -133,6 +135,33 @@
     color: var(--Dark-Grayish-Blue);
     opacity: 80%;
     margin: 2.1rem 0 0 0;
+  }
+
+  .card:nth-child(2){
+    background: linear-gradient(140deg,hsl(236, 72%, 79%), hsl(237, 63%, 64%));
+    color: #fff;
+  }
+
+  .card:nth-child(2) h1,
+  .card:nth-child(2) h2,
+  .card:nth-child(2) h3,
+  .card:nth-child(2) .details b{
+    color: white;
+    opacity: 100%;
+  }
+
+  .card:nth-child(2) .details b{
+    border-top: 1px solid #fff;
+  }
+
+  .card:nth-child(2) .details b:last-of-type{
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+  }
+
+  .card:nth-child(2) a{
+    background: #fff;
+    color: var(--Dark-Gradient);
   }
 
   .price{
@@ -178,11 +207,10 @@
 
   .card > a{
     margin-top: 2rem;
-    padding: .8rem 5rem;
+    padding: .8rem 5.3rem;
     background: linear-gradient(to right,hsl(236, 72%, 79%), hsl(237, 63%, 64%));
     text-decoration: none;
     color: #fff;
     border-radius: .5rem;
     font-size: .9rem;
   }
-}
